Store information for each domain and data breach
